# filter-fun

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  railway.json  railway.web.json
.github/workflows/: contracts-ci.yml  off-chain-ci.yml
audit/: 2026-05-PHASE-1-AUDIT.md
audit/2026-05-PHASE-1-AUDIT/: POLISH_PLAN.md  a11y.md  arena-spec-checklist.md  arena.md  brand.md  contracts.md  deps.md  docs.md  indexer.md  performance.md  security.md  triangle-glyph-audit.md  ux-flows.md  web-general.md
docs/: bag-lock.md  compute-pathway.md  one-pager.html  runbook-operator.md  runbook-sepolia-smoke.md  scoring-weights.md  zombie-tokens.md
docs/creators/: incentives.mdx
docs/protocol/: hp-methodology.mdx  post-settlement-fees.mdx
scripts/: lint-brand-glyph.mjs
track-e/: README.md  REPORT.md  REPORT_v4.md  REPORT_v4_TEMPLATE.md  REPORT_v4_pipeline.md  REPORT_v4_validation.md  REPORT_v5_formula_lock.md  REPORT_v5_validation.md  SYNTHETIC_DEMO_REPORT.md  calibrate_survival.py  corpus.csv  data_schema.md  diagnostic_hp_delta.py  discovered_tokens.csv  fetch_corpus.py  marino_xcheck.py  pipeline.py  pyproject.toml  run_v4_analysis.py  sources.md  survival_gate.py  synthetic_corpus.csv  test_pipeline.py  v4_corpus.csv  validate_hp_rank.py  validation_cohort.py  validation_cohort_v5.py  validation_corpus.csv  validation_corpus_v5.csv  validation_corpus_v5_topn50.csv
