[project]
name = "filter-fun-track-e"
version = "0.1.0"
description = "Track E HP empirical validation pipeline + corpus fetcher"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "requests>=2.31",
    "eth-utils>=4.0",
    "eth-abi>=5.0",
    "eth-hash[pycryptodome]>=0.7",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
